FestinaLenteApp/src/objects/FormOptions__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>NewRiderEmail1__c</fullName>
        <label>New Rider Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NewRiderEmail2__c</fullName>
        <label>New Rider Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SpecialNeedsEmail1__c</fullName>
        <label>Special Needs Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SpecialNeedsEmail2__c</fullName>
        <label>Special Needs Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupportedHelperEmail1__c</fullName>
        <label>Supported Helper Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupportedHelperEmail2__c</fullName>
        <label>Supported Helper Email 2</label>
        <type>Email</type>
    </fields>
    <label>Form Options</label>
</CustomObject>